crates/monochange/tests/snapshots/changeset_policy__multiline_comment@additional_paths.snap
---
source: crates/monochange/tests/changeset_policy.rs
expression: contents
---
### monochange changeset verification failed

changeset verification failed: attached changesets do not cover 1 changed package

Changed package paths:
- `Cargo.lock`

Affected packages:
- `core`

Errors:
- changed packages are not covered by attached changesets: core

Allowed skip labels:
- `no-changeset-required`

How to fix:
- add or update a `.changeset/*.md` file so it references every changed package or owning group
- for example: `mc change --package <id> --bump patch --reason "describe the change"`
- or apply one of the configured skip labels when no release note is required
