crates/monochange/tests/snapshots/changeset_policy__verify_changeset_policy_scenarios_match_snapshot@additional_paths.snap
---
source: crates/monochange/tests/changeset_policy.rs
expression: redacted
---
{
  "affectedPackageIds": [
    "core"
  ],
  "changedPaths": [
    "Cargo.lock"
  ],
  "changesetPaths": [],
  "comment": "[multiline text]",
  "coveredPackageIds": [],
  "enforce": false,
  "errors": [
    "changed packages are not covered by attached changesets: core"
  ],
  "ignoredPaths": [],
  "labels": [],
  "matchedPaths": [
    "Cargo.lock"
  ],
  "matchedSkipLabels": [],
  "required": true,
  "status": "failed",
  "summary": "changeset verification failed: attached changesets do not cover 1 changed package",
  "uncoveredPackageIds": [
    "core"
  ]
}
