crates/monochange/tests/snapshots/changeset_policy__verify_changeset_policy_scenarios_match_snapshot@covered.snap
---
source: crates/monochange/tests/changeset_policy.rs
expression: redacted
---
{
  "affectedPackageIds": [
    "core"
  ],
  "changedPaths": [
    "crates/core/src/lib.rs",
    ".changeset/feature.md"
  ],
  "changesetPaths": [
    ".changeset/feature.md"
  ],
  "comment": null,
  "coveredPackageIds": [
    "core"
  ],
  "enforce": false,
  "errors": [],
  "ignoredPaths": [],
  "labels": [],
  "matchedPaths": [
    "crates/core/src/lib.rs"
  ],
  "matchedSkipLabels": [],
  "required": true,
  "status": "passed",
  "summary": "changeset verification passed: attached changesets cover 1 changed package",
  "uncoveredPackageIds": []
}
