crates/monochange/tests/snapshots/changeset_policy__verify_changeset_policy_scenarios_match_snapshot@non_package_changes.snap
---
source: crates/monochange/tests/changeset_policy.rs
expression: redacted
---
{
  "affectedPackageIds": [],
  "changedPaths": [
    "docs/readme.md"
  ],
  "changesetPaths": [],
  "comment": null,
  "coveredPackageIds": [],
  "enforce": false,
  "errors": [],
  "ignoredPaths": [],
  "labels": [],
  "matchedPaths": [],
  "matchedSkipLabels": [],
  "required": false,
  "status": "not_required",
  "summary": "changeset verification passed: no configured packages were affected by the changed files",
  "uncoveredPackageIds": []
}
