crates/monochange/tests/snapshots/changeset_policy__verify_changeset_policy_scenarios_match_snapshot@skip_label.snap
---
source: crates/monochange/tests/changeset_policy.rs
expression: redacted
---
{
  "affectedPackageIds": [
    "core"
  ],
  "changedPaths": [
    "crates/core/src/lib.rs"
  ],
  "changesetPaths": [],
  "comment": null,
  "coveredPackageIds": [],
  "enforce": false,
  "errors": [],
  "ignoredPaths": [],
  "labels": [
    "no-changeset-required"
  ],
  "matchedPaths": [
    "crates/core/src/lib.rs"
  ],
  "matchedSkipLabels": [
    "no-changeset-required"
  ],
  "required": false,
  "status": "skipped",
  "summary": "changeset verification skipped because the change has an allowed label: no-changeset-required",
  "uncoveredPackageIds": [
    "core"
  ]
}
